[gd_scene load_steps=6 format=3 uid="uid://dqh76kx0w31y5"]

[ext_resource type="Script" path="res://main.gd" id="1_75hr6"]
[ext_resource type="PackedScene" uid="uid://b4bi81bu0jqvu" path="res://player.tscn" id="1_hvn2c"]
[ext_resource type="PackedScene" uid="uid://c8uwtpu7qatw2" path="res://mob.tscn" id="2_huukk"]
[ext_resource type="PackedScene" uid="uid://ckm3kh5eoxeei" path="res://hud.tscn" id="4_tki2j"]

[sub_resource type="Curve2D" id="Curve2D_jlknc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 482, 1, 0, 0, 0, 0, 481, 720, 0, 0, 0, 0, 1, 720, 0, 0, 0, 0, 1, 1)
}
point_count = 5

[node name="main" type="Node2D"]
script = ExtResource("1_75hr6")
mob_scene = ExtResource("2_huukk")

[node name="Player" parent="." instance=ExtResource("1_hvn2c")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_jlknc")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(1, 1)

[node name="hud" parent="." instance=ExtResource("4_tki2j")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mobtimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_scoretimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_startimer_timeout"]
[connection signal="start_game" from="hud" to="." method="new_game"]
